Create second block

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         <h2>Some random information.</h1>
         <div class="blocks">
             <div class="block">
-                <img src="" alt="cat1">
-                <div class="text">This is some subtext under an  image</div>
+                <img class="cats" src="img/cat1.jpg" alt="cat1">
+                <div class="text">This is some subtext under an  image. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</div>
             </div>
             <div class="block">
-                <img src="" alt="cat2">
-                <div class="text">This is some subtext under an  image</div>
+                <img class="cats" src="img/cat2.jpg" alt="cat2">
+                <div class="text">This is some subtext under an  image. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</div>
             </div>
             <div class="block">
-                <img src="" alt="cat3">
-                <div class="text">This is some subtext under an  image</div>
+                <img class="cats" src="img/cat3.jpg" alt="cat3">
+                <div class="text">This is some subtext under an  image. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</div>
             </div>
             <div class="block">
-                <img src="" alt="cat4">
-                <div class="text">This is some subtext under an  image</div>
+                <img class="cats" src="img/cat4.jpg" alt="cat4">
+                <div class="text">This is some subtext under an  image. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</div>
             </div>
         </div>
     </div>
