--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img class="logo" src="" alt="Header Logo">
+            <p class="logo">miu 🐱 miu</p>
             <div class="links">
                 <a href="">header link one</a>
                 <a href="">header link two</a>
@@ -52,6 +52,18 @@
             <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="author">-Thor, God of Thunder</p>
         </div>
+    </div>
+    <div class="container4">
+        <div class="action">
+            <div class="action-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p class="footer-text">Copyright &copy; Laila502 2022 </p>
     </div>
 
 </body>
